// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarCount /> should render correctly 1`] = `
<AvatarCount__Container
  size={45}
>
  9
</AvatarCount__Container>
`;

exports[`<AvatarCount /> should render correctly with other size 1`] = `
<AvatarCount__Container
  size={75}
>
  9
</AvatarCount__Container>
`;
